--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=projectDnd
 spring.datasource.url=jdbc:postgresql://localhost:5432/dnd
-spring.datasource.username=postgresMaster
+spring.datasource.username=postgresMaster2
 spring.datasource.password=${DB_PASSWORD2}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
