--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=projectDnd
 spring.datasource.url=jdbc:postgresql://localhost:5432/dnd
 spring.datasource.username=postgresMaster
 spring.datasource.password=${DB_PASSWORD2}
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.main.banner-mode=off
