--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,11 @@
-#spring.application.name=projectDnd
-#spring.datasource.url=jdbc:postgresql://localhost:5432/dnd
-#spring.datasource.username=postgresMaster
-#spring.datasource.password=${DB_PASSWORD2}
-#spring.jpa.hibernate.ddl-auto=validate
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.format_sql=true
-#spring.main.banner-mode=off
-
-
 spring.application.name=projectDnd
-spring.datasource.url=jdbc:mysql://localhost:3306/projectDnd
-spring.datasource.username=app_java
-spring.datasource.password=java2024!
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:postgresql://localhost:5432/dnd
+spring.datasource.username=postgresMaster
+spring.datasource.password=${DB_PASSWORD2}
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.main.banner-mode=off
+
+
+
